[package]
name = "math_repl"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"
repository = "https://github.com/Waigo01/math_repl"
readme = "README.md"
keywords = ["math repl", "mathrepl", "repl", "mathcli", "math"]
categories = ["mathematics", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
math_utils_lib = "0.1.5"
