[package]
name = "math_repl"
version = "0.1.0"
edition = "2021"
description = "Simple REPL for all different kinds of math."
license-file = "LICENSE.txt"
repository = "https://github.com/Waigo01/math_repl"
readme = "README.md"
keywords = ["math repl", "mathrepl", "repl", "mathcli", "math"]
categories = ["mathematics", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
doc-images = []

[package.metadata.docs.rs]
# docs.rs uses a nightly compiler, so by instructing it to use our `doc-images` feature we
# ensure that it will render any images that we may have in inner attribute documentation.
features = ["doc-images"]

[dependencies]
console = "0.15.8"
embed-doc-image = "0.1.4"
math_utils_lib = "0.1.8"
